modules/network/main.tf
# VPC
resource "aws_vpc" "vpc_main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name        = "${var.project_name}-vpc"
    Project     = var.project_name
    Environment = var.environment
  }
}

# Internet Gateway
resource "aws_internet_gateway" "igw_main" {
  vpc_id = aws_vpc.vpc_main.id

  tags = {
    Name        = "${var.project_name}-igw"
    Project     = var.project_name
    Environment = var.environment
  }
}

# NAT Gateway 
resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.subnet_public[0].id

  tags = {
    Name        = "${var.project_name}-nat-gw"
    Project     = var.project_name
    Environment = var.environment
  }
}

# Elastic IP for NAT Gateway
resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name        = "${var.project_name}-nat-eip"
    Project     = var.project_name
    Environment = var.environment
  }
  depends_on = [aws_internet_gateway.igw_main]
}

# Public Subnets (Application Load Balancer)
resource "aws_subnet" "subnet_public" {
  count                   = 2
  vpc_id                  = aws_vpc.vpc_main.id
  cidr_block              = cidrsubnet(var.vpc_cidr, 8, count.index) # 10.0.0.0/16 -> 10.0.0.0/24 & 10.0.1.0/24 
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-subnet-${count.index + 1}"
  }
}

# Route Table for Public Subnets
resource "aws_route_table" "rtb_public" {
  vpc_id = aws_vpc.vpc_main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw_main.id
  }

  tags = {
    Name = "${var.project_name}-public-route-table"
  }
}

# Private Subnets (EC2 Instances)
resource "aws_subnet" "subnet_private_web" {
  count      = 2
  vpc_id     = aws_vpc.vpc_main.id
  cidr_block = cidrsubnet(var.vpc_cidr, 8, count.index + 2)

  tags = {
    Name = "${var.project_name}-private-subnet-${count.index + 1}"
  }

}

# Route Table for Private Subnets Websites
resource "aws_route_table" "rtb_private_web" {
  vpc_id = aws_vpc.vpc_main.id

  tags = {
    Name = "${var.project_name}-private-route-table"
  }
}

# Security Group for ALB
resource "aws_security_group" "sg_alb" {
  name        = "${var.project_name}-sg-alb"
  description = "Security group for ALB"
  vpc_id      = aws_vpc.vpc_main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [""]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [""]
  }
  tags = {
    Name = "${var.project_name}-sg-alb"
  }
}
